5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1593_1806.log
== TEST (2019-03-28 10:19:17) 
-- CODE:
from math import*
x = int(input("Digite um numero : "))
factorial(x) = 1 - ((365!)/(365-x)!) * 1/365**x


-- ERROR:
File "XXXX", line 3
    factorial(x) = 1 - ((365!)/(365-x)!) * 1/365**x
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:19:53) 
-- CODE:
from math import*
x = int(input("Digite um numero : "))
factorial(x) = 1 - ((365)/(365-x)) * 1/365**x


-- ERROR:
File "XXXX", line 3
    factorial(x) = 1 - ((365)/(365-x)) * 1/365**x
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:21:02) 
-- CODE:
from math import*
x = int(input("Digite um numero : "))
factorial(x) = 1 - ((factorial(365)/(factorial(365-x)) * 1/365**x


-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:21:19) 
-- CODE:
from math import*
x = int(input("Digite um numero : "))
 n = 1 - ((factorial(365)/(factorial(365-x)) * 1/365**x
-- ERROR:
File "XXXX", line 3
    n = 1 - ((factorial(365)/(factorial(365-x)) * 1/365**x
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:21:25) 
-- CODE:
from math import*
x = int(input("Digite um numero : "))
n = 1 - ((factorial(365)/(factorial(365-x)) * 1/365**x
-- ERROR:
File "XXXX", line 4
    
                                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:21:51) 
-- CODE:
from math import*
x = int(input("Digite um numero : "))
n = 1 - ((factorial(365)/(factorial(365-x)) * 1/365**x
print(round(n, 2))
-- ERROR:
File "XXXX", line 4
    print(round(n, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:23:28) 
-- CODE:
from math import*
x = int(input("Digite um numero : "))
n = 1 - ((factorial(365)/factorial(365-x)) * 1/365**x
print(round(n, 2))
-- ERROR:
File "XXXX", line 4
    print(round(n, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:23:38) 
-- CODE:
from math import*
x = int(input("Digite um numero : "))
n = 1 - (factorial(365)/factorial(365-x)) * 1/365**x
print(round(n, 2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:23:53) 
-- CODE:
from math import*
x = int(input("Digite um numero : "))
n = 1 - (factorial(365)/factorial(365-x)) * 1/365**x
print(round(n, 2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:24:05) 
-- CODE:
from math import*
x = int(input("Digite um numero : "))
n = 1 - (factorial(365)/factorial(365-x)) * 1/365**x
print(round(n, 2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:24:37) 
-- CODE:
from math import*
x = int(input("Digite um numero : "))
n = 1 - (factorial(365)/factorial(365-x)) * 1/365**x
n1 = n*1/100
print(round(n1, 2))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:24:54) 
-- CODE:
from math import*
x = int(input("Digite um numero : "))
n = 1 - (factorial(365)/factorial(365-x)) * 1/365**x
n1 = n*1/100
print(round(n1, 2))
-- EXECUTION TIME:
0.335538
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.0
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.01
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
0.01
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:25:00) 
-- CODE:
from math import*
x = int(input("Digite um numero : "))
n = 1 - (factorial(365)/factorial(365-x)) * 1/365**x
n1 = n*1/100
print(round(n1, 2))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:25:08) 
-- CODE:
from math import*
x = int(input("Digite um numero : "))
n = 1 - (factorial(365)/factorial(365-x)) * 1/365**x
n1 = n*1/100
print(round(n1, 2))
-- EXECUTION TIME:
0.134633
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.0
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.01
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
0.01
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:25:25) 
-- CODE:
from math import*
x = int(input("Digite um numero : "))
n = 1 - (factorial(365)/factorial(365-x)) * 1/365**x
n1 = n/100
print(round(n1, 2))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:25:30) 
-- CODE:
from math import*
x = int(input("Digite um numero : "))
n = 1 - (factorial(365)/factorial(365-x)) * 1/365**x
n1 = n/100
print(round(n1, 2))
-- EXECUTION TIME:
0.142152
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.0
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.01
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
0.01
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:25:39) 
-- CODE:
from math import*
x = int(input("Digite um numero : "))
n = 1 - (factorial(365)/factorial(365-x)) * 1/365**x
n1 = n*100
print(round(n1, 2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:25:59) 
-- CODE:
from math import*
x = int(input("Digite um numero : "))
n = 1 - (factorial(365)/factorial(365-x)) * 1/365**x
n1 = n*100
print(round(n1, 2))
-- EXECUTION TIME:
0.150122
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
